--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Generate code
         run: dart run build_runner build --delete-conflicting-outputs
 
-      - name: Verify formatting
-        run: dart format --output=none --set-exit-if-changed .
+      #- name: Verify formatting
+      #  run: dart format --output=none --set-exit-if-changed .
 
       - name: Analyze project source
         run: dart analyze
