--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ build/
 pubspec.lock
 
 # Generated files
-#*.g.dart
-#*.freezed.dart
+*.g.dart
+*.freezed.dart
+*.mocks.dart
 
 # IntelliJ related
 *.iml
