--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: dart pub get
       - name: Run build_runner
-        run: dart run build_runner build
+        run: dart run build_runner build --delete-conflicting-outputs
       - name: Publish - dry run
         run: dart pub publish --dry-run
       # Publishing...
